<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TP2_Exercise2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="agenda">Agenda</string>
    <string name="add_task">Add Task</string>
    <string name="display_task">Display Task</string>
    <string name="remove_task">Remove Task</string>
    <string name="add_category">Add Category</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title_activity_display_task">DisplayTaskActivity</string>
    <string name="title_activity_remove_task">RemoveTaskActivity</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>
    
    <string name="category">Category</string>
    <string name="task_name">task_name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    
    <string name="display_task_all">Display All Task</string>
    <string name="display_task_by_category">Category</string>
    <string name="display_task_by_date">Date</string>
    <string name="display_task_by_category_and_date">Category and Date</string>
    
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    

</resources>
