<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupe_by_category"
        android:text="@string/start_date" />

    <Button
        android:id="@+id/groupe_by_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/start_date"
        android:layout_below="@id/groupe_by_category"
        android:layout_toRightOf="@id/start_date"
        android:text="" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupe_by_start_date"
        android:text="@string/end_date" />

    <Button
        android:id="@+id/groupe_by_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/end_date"
        android:layout_below="@id/groupe_by_start_date"
        android:layout_toRightOf="@id/end_date"
        android:text="" />
    
     <Button
        android:id="@+id/dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupe_by_end_date"
        android:text="@string/dialog_ok" />
     
      <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/dialog_ok"
        android:layout_below="@id/groupe_by_end_date"
        android:layout_toRightOf="@id/dialog_ok"
        android:text="@string/dialog_cancel" />

</RelativeLayout>