<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/text_groupe_by_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category" />
    
    <Spinner
    android:id="@+id/groupe_by_category"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/text_groupe_by_category"
    android:layout_alignBaseline="@id/text_groupe_by_category" />
    
    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupe_by_category"
        android:text="@string/dialog_ok" />
     
      <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/dialog_ok"
        android:layout_below="@id/groupe_by_category"
        android:layout_toRightOf="@id/dialog_ok"
        android:text="@string/dialog_cancel" />
    

</RelativeLayout>
