<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddTaskActivity" >

    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name" />

    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/task_name"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/task_name"
        android:hint="task_name" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_task_name"
        android:text="@string/start_time" />

    <Button
        android:id="@+id/edit_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/start_time"
        android:layout_below="@id/edit_task_name"
        android:layout_toRightOf="@id/start_time"
        android:onClick="startTime"
        android:text="" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_start_time"
        android:text="@string/end_time" />

    <Button
        android:id="@+id/edit_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/end_time"
        android:layout_below="@id/edit_start_time"
        android:layout_toRightOf="@id/end_time"
        android:onClick="endTime"
        android:text="" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_end_time"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/edit_category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/category"
        android:layout_below="@id/edit_end_time"
        android:layout_toRightOf="@id/category" />

    <Button
        android:id="@+id/submitTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_category"
        android:layout_centerInParent="true"
        android:onClick="addTask"
        android:text="@string/add_task" />

</RelativeLayout>